--- a/index.html
+++ b/index.html
@@ -11,80 +11,99 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
 
     <title>
       Frontend Mentor | Huddle landing page with alternating feature blocks
     </title>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><img src="images/logo.svg" alt="Logo Huddle" /></li>
-          <li><a href="#">Try It Free</a></li>
-        </ul>
-      </nav>
-      <div class="intro">
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p>
-          Huddle re-imagines the way we build communities. You have a voice, but
-          so does your audience. Create connections with your users as you
-          engage in genuine discussion.
-        </p>
-        <a href="#">Get Started For Free</a>
-      </div>
-      <div class="main-img">
-        <img src="images/illustration-mockups.svg" alt="Website Mockup" />
-      </div>
-    </header>
-    <main class="container">
-      <div class="grow-together">
-        <div class="details">
-          <h3>Grow Together</h3>
+    <div class="container">
+      <header>
+        <nav>
+          <ul>
+            <li>
+              <img class="main-logo" src="images/logo.svg" alt="Logo Huddle" />
+            </li>
+            <li><a href="#">Try It Free</a></li>
+          </ul>
+        </nav>
+        <div class="intro">
+          <h1>Build The Community Your Fans Will Love</h1>
           <p>
-            Generate meaningful discussions with your audience and build a
-            strong, loyal community. Think of the insightful conversations you
-            miss out on with a feedback form.
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
           </p>
+          <a href="#">Get Started For Free</a>
         </div>
-        <img
-          src="images/illustration-grow-together.svg"
-          alt="Man and Woman working in presentation"
-        />
-      </div>
-      <div class="flowing-conv">
-        <img
-          src="images/illustration-flowing-conversation.svg"
-          alt="Young group of people having a conversation"
-        />
-        <div class="details">
-          <h3>Flowing Conversations</h3>
-          <p>
-            ou wouldn't paginate a conversation in real life, so why do it
-            online? Our threads have just-in-time loading for a more natural
-            flow.
-          </p>
+        <div class="main-img">
+          <img src="images/illustration-mockups.svg" alt="Website Mockup" />
         </div>
-      </div>
-      <div class="your-user">
-        <div class="details">
-          <h3>Your Users</h3>
-          <p>
-            It takes no time at all to integrate Huddle with your app's
-            authentication solution. This means, once signed in to your app,
-            your users can start chatting immediately.
-          </p>
+      </header>
+      <main>
+        <div class="card grow-together">
+          <img
+            src="images/illustration-grow-together.svg"
+            alt="Man and Woman working in presentation"
+          />
+          <div class="details">
+            <h3>Grow Together</h3>
+            <p>
+              Generate meaningful discussions with your audience and build a
+              strong, loyal community. Think of the insightful conversations you
+              miss out on with a feedback form.
+            </p>
+          </div>
         </div>
-        <img src="images/illustration-your-users.svg" alt="Users commenting" />
-      </div>
-      <div class="ready">
-        <h3>Ready To Build Your Community?</h3>
-        <a href="">Get Started For Free</a>
-      </div>
+        <div class="card flowing-conv">
+          <img
+            src="images/illustration-flowing-conversation.svg"
+            alt="Young group of people having a conversation"
+          />
+          <div class="details">
+            <h3>Flowing Conversations</h3>
+            <p>
+              You wouldn't paginate a conversation in real life, so why do it
+              online? Our threads have just-in-time loading for a more natural
+              flow.
+            </p>
+          </div>
+        </div>
+        <div class="card your-user">
+          <img
+            src="images/illustration-your-users.svg"
+            alt="Users commenting"
+          />
+          <div class="details">
+            <h3>Your Users</h3>
+            <p>
+              It takes no time at all to integrate Huddle with your app's
+              authentication solution. This means, once signed in to your app,
+              your users can start chatting immediately.
+            </p>
+          </div>
+        </div>
+      </main>
       <footer>
+                <div class="ready">
+          <h3>Ready To Build Your Community?</h3>
+          <a href="#">Get Started For Free</a>
+        </div>
         <div class="contact">
-          <img src="images/logo.svg" alt="logo huddle" class="logo-footer" />
+          <img class="logo-footer" src="images/logo.svg" alt="logo huddle" />
           <ul>
             <li>
               <img src="images/icon-location.svg" alt="location icon" />
@@ -103,7 +122,7 @@
             </li>
           </ul>
         </div>
-        <div class="info container">
+        <div class="info-container">
           <ul class="info">
             <li>About Us</li>
             <li>What We Do</li>
@@ -118,18 +137,18 @@
         <div class="socials">
           <ul>
             <li>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-                <path
-                  d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
-                />
-              </svg>
-            </li>
-            <li>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                 <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
                 <path
                   d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
+                />
+              </svg>
+            </li>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                <path
+                  d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                 />
               </svg>
             </li>
@@ -142,9 +161,9 @@
               </svg>
             </li>
           </ul>
-          <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
         </div>
+        <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
       </footer>
-    </main>
+    </div>
   </body>
 </html>
